# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../companion_device_auth.gni")

# Rust service source files
companion_device_auth_rust_service_local_sources = [
  "commands/common_command.rs",
  "commands/mod.rs",
  "commands/system_commands.rs",
  "common/constants.rs",
  "common/mod.rs",
  "common/types.rs",
  "entry/companion_device_auth_entry.rs",
  "entry/companion_device_auth_ffi.rs",
  "entry/mod.rs",
  "impls/default_companion_db_manager.rs",
  "impls/default_companion_request_manager.rs",
  "impls/default_event_manager.rs",
  "impls/default_host_db_manager.rs",
  "impls/default_host_request_manager.rs",
  "impls/default_misc_manager.rs",
  "impls/default_storage_io.rs",
  "impls/default_time_keeper.rs",
  "impls/hilog_logger.rs",
  "impls/mod.rs",
  "impls/openssl_crypto_engine.rs",
  "jobs/companion_db_helper.rs",
  "jobs/host_db_helper.rs",
  "jobs/message_crypto.rs",
  "jobs/mod.rs",
  "lib.rs",
  "request/delegate_auth/auth_message.rs",
  "request/delegate_auth/companion_auth.rs",
  "request/delegate_auth/host_auth.rs",
  "request/delegate_auth/mod.rs",
  "request/enroll/companion_enroll.rs",
  "request/enroll/enroll_message.rs",
  "request/enroll/host_enroll.rs",
  "request/enroll/mod.rs",
  "request/jobs/common_message.rs",
  "request/jobs/mod.rs",
  "request/jobs/token_helper.rs",
  "request/mod.rs",
  "request/status_sync/companion_sync_status.rs",
  "request/status_sync/host_sync_status.rs",
  "request/status_sync/mod.rs",
  "request/token_auth/auth_message.rs",
  "request/token_auth/companion_auth.rs",
  "request/token_auth/host_auth.rs",
  "request/token_auth/mod.rs",
  "request/token_issue/companion_issue_token.rs",
  "request/token_issue/host_issue_token.rs",
  "request/token_issue/mod.rs",
  "request/token_issue/token_issue_message.rs",
  "request/token_obtain/companion_obtain_token.rs",
  "request/token_obtain/host_obtain_token.rs",
  "request/token_obtain/mod.rs",
  "request/token_obtain/token_obtain_message.rs",
  "traits/companion_db_manager.rs",
  "traits/companion_request_manager.rs",
  "traits/crypto_engine.rs",
  "traits/db_manager.rs",
  "traits/event_manager.rs",
  "traits/host_db_manager.rs",
  "traits/host_request_manager.rs",
  "traits/logger.rs",
  "traits/misc_manager.rs",
  "traits/mod.rs",
  "traits/singleton_registry.rs",
  "traits/storage_io.rs",
  "traits/time_keeper.rs",
  "utils/attribute.rs",
  "utils/auth_token.rs",
  "utils/message_codec.rs",
  "utils/mod.rs",
  "utils/parcel.rs",
  "utils/scope_guard.rs",
]

# For security_agent/BUILD.gn - relative paths from security_agent directory
companion_device_auth_rust_service_relative_sources = []
foreach(src, companion_device_auth_rust_service_local_sources) {
  companion_device_auth_rust_service_relative_sources += [ "rust/" + src ]
}

# For test BUILD.gn - absolute paths
companion_device_auth_rust_service_sources = []
foreach(src, companion_device_auth_rust_service_local_sources) {
  companion_device_auth_rust_service_sources +=
      [ "${companion_device_auth_path}/services/security_agent/rust/" + src ]
}

companion_device_auth_rust_service_external_deps = [
  "c_utils:utils_rust",
  "hilog:hilog_rust",
  "rust_cxx:lib",
  "rust_libc:lib",
  "rust_rust-openssl:lib",
]

companion_device_auth_rust_service_deps =
    [ "//third_party/rust/crates/serde/serde:lib" ]
