# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/config/features.gni")
import("//build/test.gni")
import("../../../companion_device_auth.gni")
import("../../../services/BUILD.gni")

ohos_fuzztest("CompanionDeviceAuthServiceFuzzer") {
  branch_protector_ret = "pac_ret"
  module_out_path = "companion_device_auth/services"
  fuzz_config_file = "../common_fuzzer_config"

  cflags = [
    "-DENABLE_TEST",
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sources = companion_device_auth_service_sources +
            [ "src/companion_device_auth_services_fuzzer.cpp" ]

  configs = [ "${companion_device_auth_path}/services:service_config" ]

  deps = companion_device_auth_service_deps

  external_deps = companion_device_auth_service_external_deps

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
