# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../companion_device_auth.gni")
import("../../../frameworks/native/client/BUILD.gni")
import("../../test_config.gni")

ohos_unittest("companion_device_auth_client_test") {
  sanitize = companion_device_auth_sanitize
  branch_protector_ret = "pac_ret"
  module_out_path = "companion_device_auth/client"

  cflags = companion_device_auth_test_cflags

  sources = companion_device_auth_client_full_sources + [
              # Test sources
              "cases/companion_device_auth_client_impl_test.cpp",
              "cases/system_ability_listener_test.cpp",
            ]

  include_dirs = [
    "cases/mock",
    "${companion_device_auth_path}/frameworks/native/client/inc",
    "${companion_device_auth_path}/frameworks/native/ipc/inc",
  ]

  deps = companion_device_auth_client_deps

  external_deps = companion_device_auth_client_external_deps +
                  companion_device_auth_test_external_deps

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}

group("client_test") {
  testonly = true
  deps = [ ":companion_device_auth_client_test" ]
}
