# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../../companion_device_auth.gni")
import("../../../../services/BUILD.gni")
import("../../../fake/BUILD.gni")
import("../../../test_config.gni")

config("companion_device_auth_service_fuzzer_common_config") {
  cflags = [
    "-DENABLE_TEST",
    "-DGTEST_HAS_CLONE=0",
  ]

  include_dirs = [
    "inc",
    "../../common_fuzzer_config",
  ]
  include_dirs += companion_device_auth_fake_include_dirs
}

# Static library for fuzz test helpers
ohos_static_library("companion_device_auth_service_fuzzer_common") {
  sanitize = companion_device_auth_unit_test_sanitize
  branch_protector_ret = "pac_ret"
  testonly = true

  sources = companion_device_auth_service_sources_for_test
  sources += companion_device_auth_fake_sources
  sources += [
    "src/adapter_initializer.cpp",
    "src/channel_adapter_initializer.cpp",
    "src/fuzz_data_generator.cpp",
    "src/singleton_initializer.cpp",
  ]

  cflags = [ "-DSTATIC_LIBRARY" ]

  public_configs = [
    ":companion_device_auth_service_fuzzer_common_config",
    "${companion_device_auth_path}/services:service_config",
  ]

  deps = companion_device_auth_service_deps
  deps +=
      [ "${companion_device_auth_path}/common:companion_device_auth_common" ]

  external_deps = companion_device_auth_service_external_deps

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
