# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../companion_device_auth.gni")
import("../../../../services/BUILD.gni")
import("../../../../test/fake/BUILD.gni")

ohos_moduletest("companion_device_auth_services_cpp_moduletest") {
  sanitize = companion_device_auth_sanitize
  branch_protector_ret = "pac_ret"
  module_out_path = "companion_device_auth/services"

  cflags = [
    "-DENABLE_TEST",
    "-Dprivate=public",
    "-Dprotected=public",
  ]

  sources = companion_device_auth_service_sources_for_test

  sources += companion_device_auth_fake_sources + [
               # Sample module test
               "cases/sample_test.cpp",
             ]

  include_dirs = [
    "cases",
    "inc",
  ]

  include_dirs += companion_device_auth_fake_include_dirs

  configs = [ "${companion_device_auth_path}/services:service_config" ]

  deps = companion_device_auth_service_deps

  external_deps = companion_device_auth_service_external_deps + [
                    "googletest:gmock_main",
                    "googletest:gtest_main",
                  ]

  remove_configs = [ "//build/config/compiler:no_exceptions" ]

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
