# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../companion_device_auth.gni")
import("../../../../services/BUILD.gni")
import("../../../../test/fake/BUILD.gni")
import("../../../test_config.gni")

ohos_moduletest("companion_device_auth_services_cpp_module_test") {
  sanitize = companion_device_auth_unit_test_sanitize
  branch_protector_ret = "pac_ret"
  module_out_path = "${companion_device_auth_subsystem_name}/${companion_device_auth_part_name}"

  cflags = companion_device_auth_unit_test_cflags
  ldflags = companion_device_auth_unit_test_ldflags

  sources = [
    "cases/add_companion_module_test.cpp",
    "cases/auth_module_test.cpp",
    "cases/connection_module_test.cpp",
    "cases/service_init_module_test.cpp",
    "cases/sync_device_status_module_test.cpp",
    "common/src/module_test_guard.cpp",
    "common/src/module_test_helpers.cpp",
  ]

  include_dirs = [
    "common/inc",
    "${companion_device_auth_path}/test/unittest/services/cpp/common/inc",
  ]
  include_dirs += companion_device_auth_fake_include_dirs

  configs = [ "${companion_device_auth_path}/services:service_config" ]
  deps = companion_device_auth_service_deps
  deps += [ "../../../unittest/services/cpp/common:companion_device_auth_service_unittest_common_inner" ]
  external_deps = companion_device_auth_service_external_deps +
                  companion_device_auth_unit_test_external_deps
  remove_configs = [ "//build/config/compiler:no_exceptions" ]
  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
