# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../companion_device_auth.gni")
import("../../../../services/BUILD.gni")
import("../../../../test/fake/BUILD.gni")
import("../../../test_config.gni")

ohos_unittest("companion_device_auth_services_cpp_test") {
  sanitize = companion_device_auth_unit_test_sanitize
  branch_protector_ret = "pac_ret"
  module_out_path = "companion_device_auth/services"

  cflags = companion_device_auth_unit_test_cflags
  ldflags = companion_device_auth_unit_test_ldflags

  sources = companion_device_auth_service_sources_for_test
  sources += companion_device_auth_fake_sources
  sources += [
    "../../common/mock_guard.cpp",
    "cases/common/attributes_test.cpp",
    "cases/common/error_guard_test.cpp",
    "cases/common/misc_manager_impl_test.cpp",
    "cases/common/scope_guard_test.cpp",
    "cases/companion/companion_add_companion_request_test.cpp",
    "cases/companion/companion_delegate_auth_request_test.cpp",
    "cases/companion/companion_device_auth_ffi_util_test.cpp",
    "cases/companion/companion_init_key_negotiation_handler_test.cpp",
    "cases/companion/companion_issue_token_request_test.cpp",
    "cases/companion/companion_manager_impl_test.cpp",
    "cases/companion/companion_obtain_token_request_test.cpp",
    "cases/companion/companion_pre_issue_token_handler_test.cpp",
    "cases/companion/companion_remove_host_binding_handler_test.cpp",
    "cases/companion/companion_revoke_token_request_test.cpp",
    "cases/companion/companion_start_delegate_auth_handler_test.cpp",
    "cases/companion/companion_sync_device_status_handler_test.cpp",
    "cases/companion/companion_test.cpp",
    "cases/companion/companion_token_auth_handler_test.cpp",
    "cases/cross_device_comm/channel_manager_test.cpp",
    "cases/cross_device_comm/connection_manager_test.cpp",
    "cases/cross_device_comm/cross_device_comm_manager_impl_test.cpp",
    "cases/cross_device_comm/device_status_entry_test.cpp",
    "cases/cross_device_comm/device_status_manager_test.cpp",
    "cases/cross_device_comm/local_device_status_manager_test.cpp",
    "cases/cross_device_comm/message_router_test.cpp",
    "cases/external_adapters/soft_bus_adapter_test.cpp",
    "cases/fwk_comm/fwk_comm_manager_test.cpp",
    "cases/host_binding/host_binding_manager_impl_test.cpp",
    "cases/host_binding/host_binding_test.cpp",
    "cases/request/add_companion_message_test.cpp",
    "cases/request/async_incoming_message_handler_test.cpp",
    "cases/request/companion_device_auth_all_in_one_executor_test.cpp",
    "cases/request/companion_device_auth_driver_test.cpp",
    "cases/request/companion_device_auth_executor_callback_test.cpp",
    "cases/request/delegate_auth_message_test.cpp",
    "cases/request/host_add_companion_request_test.cpp",
    "cases/request/host_delegate_auth_request_test.cpp",
    "cases/request/host_issue_token_request_test.cpp",
    "cases/request/host_mix_auth_request_test.cpp",
    "cases/request/host_obtain_token_request_test.cpp",
    "cases/request/host_pre_obtain_token_handler_test.cpp",
    "cases/request/host_remove_host_binding_request_test.cpp",
    "cases/request/host_revoke_token_handler_test.cpp",
    "cases/request/host_single_mix_auth_request_test.cpp",
    "cases/request/host_sync_device_status_request_test.cpp",
    "cases/request/host_token_auth_request_test.cpp",
    "cases/request/incoming_message_handler_registry_test.cpp",
    "cases/request/issue_token_message_test.cpp",
    "cases/request/keep_alive_handler_test.cpp",
    "cases/request/obtain_token_message_test.cpp",
    "cases/request/remove_host_binding_message_test.cpp",
    "cases/request/revoke_token_message_test.cpp",
    "cases/request/sync_device_status_message_test.cpp",
    "cases/request/sync_incoming_message_handler_test.cpp",
    "cases/request/token_auth_message_test.cpp",
    "cases/service_entry/available_device_subscription_test.cpp",
    "cases/service_entry/companion_device_auth_service_test.cpp",
    "cases/service_entry/continuous_auth_subscription_test.cpp",
    "cases/service_entry/subscription_manager_test.cpp",
    "cases/service_entry/subscription_test.cpp",
    "cases/service_entry/template_status_subscription_test.cpp",
    "cases/soft_bus_cross_device_channel/soft_bus_channel_test.cpp",
    "cases/soft_bus_cross_device_channel/soft_bus_connection_manager_test.cpp",
    "cases/soft_bus_cross_device_channel/soft_bus_connection_test.cpp",
    "cases/soft_bus_cross_device_channel/soft_bus_device_status_manager_test.cpp",
    "cases/utils/backoff_retry_timer_test.cpp",
    "cases/utils/constant_user_id_manager_test.cpp",
    "cases/utils/system_param_manager_impl_test.cpp",
  ]

  include_dirs = [
    "../../common",
    "common",
    "cases/mock",
    "inc",
  ]
  include_dirs += companion_device_auth_fake_include_dirs

  configs = [ "${companion_device_auth_path}/services:service_config" ]
  deps = companion_device_auth_service_deps
  external_deps = companion_device_auth_service_external_deps +
                  companion_device_auth_unit_test_external_deps
  remove_configs = [ "//build/config/compiler:no_exceptions" ]
  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
