# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../../companion_device_auth.gni")
import("../../../../services/security_agent/rust/BUILD.gni")

ohos_rust_unittest("companion_device_auth_services_rust_test") {
  module_out_path = "companion_device_auth/services"

  crate_root = "src/lib.rs"

  # Local rust test source files
  sources = [
    "src/attribute_test.rs",
    "src/lib.rs",
    "src/message_codec_test.rs",
    "src/parcel_test.rs",
    "src/scope_guard_test.rs",
    "src/simple_test.rs",
  ]

  # Add rust service sources from services/BUILD.gni
  sources += companion_device_auth_rust_service_sources

  external_deps = companion_device_auth_rust_service_external_deps

  deps = companion_device_auth_rust_service_deps

  rustenv = []

  rustc_lints = "none"
  clippy_lints = "none"

  subsystem_name = companion_device_auth_subsystem_name
  part_name = companion_device_auth_part_name
}
